...
import com.android.universe.ui.navigation.Tab
import com.android.universe.ui.theme.Dimensions
import com.tomtom.sdk.location.GeoPoint

object MapScreenTestTags {
  const val MAP_VIEW = "map_view"
  const val INTERACTABLE = "interactable"
  const val LOADING_INDICATOR = "loading_indicator"
  const val CREATE_EVENT_BUTTON = "create_event_button"
  const val EVENT_INFO_POPUP = "event_info_popup"
  const val EVENT_JOIN_LEAVE_BUTTON = "event_join_leave_button"
  const val SELECT_LOCATION_TEXT = "select_location_text"
}

/**
 * Defines the interaction mode of the map UI.
...
